<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/backgroundImage"
        android:src="@drawable/usmc"
        android:alpha=".50"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:id="@+id/toText"
        android:textColor="#5bc263"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailAddress"
        android:inputType="textEmailAddress"
        android:hint="@string/emailHint"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/toText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subj"
        android:id="@+id/subjText"
        android:textColor="#5bc263"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/emailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject"
        android:hint="@string/subjHint"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/subjText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mess"
        android:id="@+id/messText"
        android:textColor="#5bc263"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/subject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:hint="@string/messHint"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/messText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="130dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="7"
        android:text=""
        android:id="@+id/usmcText"
        android:textColor="#FFFF00"
        android:paddingTop="5dp"
        android:textSize="15sp"
        android:layout_below="@+id/message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/sendBtn"
        android:id="@+id/send"
        android:textColor="#FFFF00"
        android:background="#BA0000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/attImages"
        android:id="@+id/attImg"
        android:textSize="16sp"
        android:textColor="#5bc263"
        android:layout_above="@+id/send"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:text=""
        android:id="@+id/attImgText"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:layout_above="@+id/send"
        android:layout_toRightOf="@+id/attImg" />

</RelativeLayout>
